invisible fixed variable

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   justify-content: center;
   align-items: height: 100vh;
   font-size: 1rem;
-  cursor: url('images\pomodoro.png'), auto;
+  cursor: url('images/pomodoro-cursor.png'), auto;
 }
 
 
@@ -15,6 +15,11 @@ body {
   padding: 1rem;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.invisible {
+  color: rgb(255,255,255);
+  font-size: .1rem;
 }
 
 #timer {
@@ -37,7 +42,7 @@ body {
 .buttons button:hover {
   background-color: #D7DD67;
   box-shadow: 2.5px 2px 4px #658B00;
-  cursor: url('images\pomodoro.png'), auto;
+  cursor: url('images/pomodoro-cursor.png'), auto;
   transform: scale(1.05);
 }
 
@@ -46,7 +51,7 @@ body {
   box-shadow: 1px 1px 2px rgba(0,0,0,0.2);
 }
 
-.pomodoro-img {
+.imgs {
   width: 150px;
   margin: 1rem;
   border-radius: 10px;
